# Rampage

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  _build_run.bat  do_build.ps1  rampage2_ut.toml  rampage_wt.toml  run_game.bat
RecompiledFuncs_R2/: func_stubs.c  funcs_1.c  funcs_63.c  funcs_64.c  funcs_65.c
RecompiledFuncs_WT/: func_stubs.c  funcs_33.c  funcs_4.c  funcs_60.c  funcs_61.c  funcs_62.c  funcs_63.c  funcs_64.c  funcs_65.c  funcs_66.c  funcs_67.c
RecompiledPatches/: patches.c  patches_bin.c  patches_bin.h  recomp_overlays.inl
include/: recomp_data.h  recomp_input.h  sn64_rom_helpers.h  zelda_config.h  zelda_game.h  zelda_sound.h
patches/: Makefile  debug.h  graphics.h  input.h  main.c  misc_funcs.h  patch_helpers.h  patches.h  patches.ld  print.c  sound.h  syms.ld
rsp/: aspMain.cpp
scripts/: capture_both.ps1  capture_reference.ps1  capture_screenshot.ps1  fix_func_boundaries.py  fix_func_boundaries2.py  update_symbols.py
src/game/: config.cpp  controls.cpp  input.cpp  recomp_api.cpp  rom_decompression.cpp  sn64_rom_helpers.cpp
src/main/: main.cpp  register_overlays.cpp  register_patches.cpp  rt64_render_context.cpp
src/ui/: ui_config.cpp  ui_elements.cpp  ui_mod_menu.cpp  ui_state.cpp
src/ui/core/: ui_context.cpp
symbols/: rampage2_ut_syms.toml  rampage2_ut_syms_stubs.txt  rampage_wt_syms.toml  rampage_wt_syms_stubs.txt
tools/: external_jals_output.txt  extract_symbols.py  find_external_jals.py  find_fallthrough_funcs.py  fix_cross_func_gotos.py  fix_fallthrough_funcs.py  fix_fallthroughs_v2.py  fix_hilo_fallthrough.py  fix_r2_after_labels.py  fix_r2_fallthroughs.py  fix_r2_post_recomp.py  fix_r2_short_fallthroughs.py  quest64_cmake_reference.txt  quest64_main_reference.txt  visualize_frame.py
tools/n64sym/: rampage_wt_rom_syms.txt  rampage_wt_syms.txt
